# sen

./: .gitignore  .packit.yaml  .travis.yml  CHANGELOG.md  Dockerfile  Dockerfile.fedora  LICENSE  MANIFEST.in  README.md  circle.yml  io.github.tomastomecek.sen.metainfo.xml  pyproject.toml  release-conf.yaml  requirements-test.txt  requirements.txt  sen.spec  setup.py
debian/: changelog  control  copyright  files  rules  sen.1  sen.1.txt  sen.install  sen.manpages  watch
docs/: devel.md  features.md  releasing.md
plans/: README.md  full.fmf
sen/: __init__.py  cli.py  constants.py  docker_backend.py  exceptions.py  net.py  tui.py  util.py
sen/cli/: main.py
sen/tui/: __init__.py  buffer.py  commands.py  constants.py  init.py  main_list.py  statusbar.py  ui.py  widget.py
sen/tui/chunks/: __init__.py  container.py  elemental.py  image.py  misc.py
sen/tui/commands/: __init__.py  backend.py  base.py  display.py  ui.py  widget.py
sen/tui/views/: __init__.py  base.py  container_info.py  disk_usage.py  help.py  image_info.py  main.py
sen/tui/widgets/: __init__.py  graph.py  info.py  responsive_column.py  table.py  tree.py  util.py
sen/tui/widgets/list/: __init__.py  base.py  common.py  main.py  util.py
share/metainfo/: io.github.tomastomecek.sen.metainfo.xml
tests/: constants.py  full.fmf  real.py  test_commands.py  test_concurrency.py  test_container_info.py  test_docker_backend.py  test_net.py  test_util.py  test_widgets.py  utils.py
